--- a/app/index.html
+++ b/app/index.html
@@ -1,180 +1,12 @@
 <!DOCTYPE html>
-<!--if lt IE 7html.no-js.lt-ie9.lt-ie8.lt-ie7  
--->
-<!--if IE 7html.no-js.lt-ie9.lt-ie8  
--->
-<!--if IE 8html.no-js.lt-ie9  
--->
-<!-- [if gt IE 8] <!-->
-<html class="no-js">
-  <!-- <![endif]-->
-  <head>
-    <meta charset="utf-8">  
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">  
-    <title>&#x5C45;&#x5916;SIV&#x623F;&#x5730;&#x4EA7;&#x57FA;&#x91D1; &#x5F00;&#x542F;&#x5FEB;&#x901F;&#x79FB;&#x6C11;&#x6FB3;&#x6D32;&#x901A;&#x9053; - &#x5C45;&#x5916;&#x7F51;</title>  
-    <meta name="description" content="">  
-    <meta name="keywords" content="">  
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/main.css">
-    <script src="js/bootstrap.js"></script>
-  </head>
-  <body>
-    <div class="header">
-      <nav role="navigation" class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" class="navbar-toggle collapsed"><span class="sr-only">Toggle navigation</span>&#x9;&#x9;&#x9;        <span class="icon-bar"></span>&#x9;&#x9;&#x9;        <span class="icon-bar"></span>&#x9;&#x9;&#x9;        <span class="icon-bar"></span></button>
-          </div>
-          <!-- Collect the nav links, forms, and other content for toggling-->
-          <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="">&#x5C45;&#x5916;&#x9996;&#x9875;</a></li>
-            </ul>          
-            <ul class="nav navbar-nav navbar-right top-nav">
-              <li><a target="_blank" href="http://www.juwai.com/USproperty">&#x7F8E;&#x56FD;&#x623F;&#x4EA7; <span>|</span></a></li>            
-              <li><a target="_blank" href="http://www.juwai.com/AUproperty">&#x6FB3;&#x5927;&#x5229;&#x4E9A;&#x623F;&#x4EA7; <span>|</span></a></li>            
-              <li><a target="_blank" href="http://www.juwai.com/CAproperty">&#x52A0;&#x62FF;&#x5927;&#x623F;&#x4EA7; <span>|</span></a></li>            
-              <li><a target="_blank" href="http://www.juwai.com/UKproperty">&#x82F1;&#x56FD;&#x623F;&#x4EA7; <span>|</span></a></li>            
-              <li><a target="_blank" href="http://www.juwai.com/NZproperty">&#x65B0;&#x897F;&#x5170;&#x623F;&#x4EA7; <span>|</span></a></li>            
-              <li><a target="_blank" href="http://www.juwai.com/THproperty">&#x6CF0;&#x56FD;&#x623F;&#x4EA7; <span>|</span></a></li>            
-              <li><a target="_blank" href="http://www.juwai.com/SGproperty">&#x65B0;&#x52A0;&#x5761;&#x623F;&#x4EA7; <span>|</span></a></li>            
-              <li><a target="_blank" href="http://www.juwai.com/PTproperty">&#x8461;&#x8404;&#x7259;&#x623F;&#x4EA7;</a></li>
-            </ul>
-          </div>
-          <!-- /.navbar-collapse-->
-        </div>
-        <!-- /.container-fluid-->
-      </nav>
-    </div>  
-    <div class="fix-form">
-      <div>
-        <form id="sendform" name="sendform" method="post">
-          <input id="post_url" type="hidden" name="url" value="https://www.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8">        
-          <input type="hidden" name="orgid" value="00D90000000lh7N">        
-          <input type="hidden" name="retURL" value="http://">        
-          <input id="recordType" type="hidden" name="recordType" value="0126F0000012HjF">        
-          <div class="container">
-            <div class="row">
-              <div class="col-md-8 title">&#x6295;&#x8D44;&#x5C45;&#x5916;SIV&#x623F;&#x5730;&#x4EA7;&#x57FA;&#x91D1;=SIV&#x7533;&#x8BF7;100%&#x6210;&#x529F;</div>
-            </div>          
-            <div class="row">
-              <div class="col-md-8 col-sm-12 left">
-                <div class="col-md-6">&#x59D3;&#x540D;
-                  <input id="00N90000008PMXk" maxlength="80" name="00N90000008PMXk" size="20" type="text">*&#x5FC5;&#x586B;
-                </div>              
-                <div class="col-md-6">&#x624B;&#x673A;
-                  <input id="00N90000008PMXl" maxlength="40" name="00N90000008PMXl" size="20" type="text">*&#x5FC5;&#x586B;
-                </div>              
-                <div class="col-md-6">&#x90AE;&#x7BB1;
-                  <input id="00N90000008PMXj" maxlength="80" name="00N90000008PMXj" size="20" type="text">*&#x5FC5;&#x586B;
-                </div>              
-                <input type="hidden" name="subject" value="Juwai SIV Australia  - Landing Page">              
-                <input id="00N90000006GMET" style="display:none" value="618094" maxlength="20" name="00N90000006GMET" size="20" type="text">              
-                <input id="00N90000006IK3a" type="hidden" name="00N90000006IK3a" maxlength="20" size="20">              
-                <input id="00N6F00000E1zXD" style="display:none" maxlength="255" name="00N6F00000E1zXD" size="20" type="text">              
-                <input id="00N90000009SB6L" style="display:none" maxlength="255" name="00N90000009SB6L" size="20" type="text">              
-                <input id="00N90000009SBCo" style="display:none" maxlength="255" name="00N90000009SBCo" size="20" type="text">              
-                <input id="00N90000009SB6G" style="display:none" maxlength="255" name="00N90000009SB6G" size="20" type="text">              
-                <input id="00N6F00000E1zN8" style="display:none" maxlength="255" name="00N6F00000E1zN8" size="20" type="text">              
-                <input id="00N6F00000EgmtT" style="display:none" name="00N6F00000EgmtT" type="checkbox" value="1">              
-                <input id="00N6F00000EgmtY" style="display:none" name="00N6F00000EgmtY" type="checkbox" value="1">              
-                <input id="00N6F00000Egmtd" style="display:none" maxlength="50" name="00N6F00000Egmtd" size="20" type="text">              
-                <input id="00N6F00000EgUQc" type="hidden" name="00N6F00000EgUQc" value="Landing Page">              
-                <div class="col-md-6 buttons">
-                  <button type="button" onclick="gotoSend()">&#x786E;&#x5B9A;</button>
-                </div>
-              </div>            
-              <div class="col-md-4 col-sm-12 right">
-                <h5 class="first"><i class="bgi"></i>&#x54A8;&#x8BE2;&#x70ED;&#x7EBF;&#xFF1A;</h5>              
-                <h5>400-041-7515</h5>
-              </div>
-            </div>
-          </div>
-        </form>
-      </div>
-    </div>  
-    <div class="back-modal">
-      <div id="alertMessage" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" data-dismiss="modal" class="close"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>            <br>
-            </div>          
-            <div style="text-align:center;" class="modal-body"><img src="images/confirm_ok.png" alt="">            
-              <h5>&#x611F;&#x8C22;&#x60A8;&#x5BF9;&#x5C45;&#x5916;&#x7684;&#x4FE1;&#x4EFB;&#xFF01;</h5>            
-              <h5>&#x6211;&#x4EEC;&#x4F1A;&#x5C3D;&#x5FEB;&#x5E2E;&#x60A8;&#x641C;&#x5BFB;&#x5408;&#x9002;&#x7684;&#x623F;&#x6E90;&#xFF01;</h5>            
-              <p><span style="color:red">2</span>&#x79D2;&#x540E;&#x81EA;&#x52A8;&#x5173;&#x95ED;</p>
-            </div>          
-            <div class="modal-footer">
-              <button type="button" data-dismiss="modal" class="btn btn-default">&#x5173;&#x95ED;</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!--if lt IE 7
-    p.browsehappy
-      | You are using an 
-      strong outdated
-      |  browser. Please 
-      a(href='http://browsehappy.com/') upgrade your browser
-      |  to improve your experience.
-    -->
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
-    <script>
-      (function (w, d, s, l, i) {
-      w[l] = w[l] || [];
-      w[l].push({
-      'gtm.start': new Date().getTime(),
-      event: 'gtm.js'
-      });
-      var f = d.getElementsByTagName(s)[0],
-      j = d.createElement(s),
-      dl = l != 'dataLayer' ? '&l=' + l : '';
-      j.async = true;
-      j.src =
-      '//www.googletagmanager.com/gtm.js?id=' + i + dl;
-      f.parentNode.insertBefore(j, f);
-      })(window, document, 'script', 'dataLayer', 'GTM-5PSZVF');
-    </script>  
-    <script type="text/javascript" id="">
-      window.ga = window.ga || function () {
-      (ga.q = ga.q || []).push(arguments)
-      };
-      ga.l = +new Date;
-      ga("create", "UA-24603463-1", "auto");
-    </script>  
-    <script type="text/javascript" id="">
-      var _agt = _agt || [];
-      _agt.push(["_atscu", "AG_237441_XULS"]);
-      _agt.push(["_atsdomain", "juwai.com"]);
-      (function () {
-      var a = document.createElement("script");
-      a.type = "text/javascript";
-      a.async = !0;
-      a.src = ("https:" == document.location.protocol ? "https" : "http") + "://t.agrantsem.com/js/ag.js";
-      var b = document.getElementsByTagName("script")[0];
-      b.parentNode.insertBefore(a, b)
-      })();
-      function ag_237441_xuls_ats101(a) {
-      _agt = [];
-      _agt.push(["_atscu", "AG_237441_XULS"]);
-      _agt.push(["_atsdomain", "juwai.com"]);
-      _agt.push(["_atsev", "101"]);
-      _agt.push(["_atsusr", a]);
-      a = document.createElement("script");
-      a.type = "text/javascript";
-      a.async = !0;
-      a.src = ("https:" == document.location.protocol ? "https" : "http") + "://t.agrantsem.com/js/ag.js";
-      var b = document.getElementsByTagName("script")[0];
-      b.parentNode.insertBefore(a, b)
-      }
-      function agrant_send(a) {
-      ag_237441_xuls_ats101(a)
-      };
-    </script>
-    <script src="bower_components/jquery/jquery.js"></script>  
-    <script src="scripts/main.js"></script>  
-    <script src="scripts/hello.js"></script>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <canvas id="main-panel"></canvas>
+  <script type="text/javascript" src="js/main.js"></script>
+</body>
 </html>
