--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/style.css">
+	<meta charset="UTF-8">
+	<title>Timer</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <canvas id="main-panel"></canvas>
-  <script type="text/javascript" src="js/main.js"></script>
+	<canvas id="main-panel">
+	</canvas>
+	<script src="js/main.js"></script>
 </body>
 </html>
