--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,9 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+	<canvas id="main-panel"></canvas>
+	<input id="words" type="text" placeholder="Enter the words">
+	<button class="button">显示</button>
 	<script type="text/javascript" src="js/bundle.js"></script>
 </body>
 </html>
